# FileTextExtractor

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.json  main.cpp
format/: decoder.cpp  decoder.h  decoder_archive.cpp  decoder_archive.h  decoder_asar.cpp  decoder_asar.h  decoder_doc.cpp  decoder_doc.h  decoder_open_xml.cpp  decoder_open_xml.h  decoder_pdf.cpp  decoder_pdf.h  decoder_ppt.cpp  decoder_ppt.h  decoder_rtf.cpp  decoder_rtf.h  decoder_txt.cpp  decoder_txt.h  decoder_xls.cpp  decoder_xls.h  decoder_zip.cpp  decoder_zip.h  format.cpp  format.h
